tests/paczka2/big_fuzzy/42538532.err
Error in line 2: lcpzxSTrhoZ S802 46,5
Error in line 17: hHH7vG A482 39,7
Error in line 23: hHH7vG S464 795,4
Error in line 36: KXV A4
Error in line 37: 2 50,3
Error in line 30: XCu4 S464 77,6
Error in line 32: KXV A482 10,8
Error in line 38: XCu4 S802 43,1
Error in line 28: LeNG29Ueova S883 27,9
Error in line 33: hHH7vG S883 6,7
Error in line 56: S464 S883 94,8
Error in line 54: XCu4 S883 41,2
Error in line 62: XCu4 A482 68,8
Error in line 59: lcpzxSTrhoZ S802 100,0
Error in line 63: S464 A482 73,9
Error in line 78: KXV S802 12,9
Error in line 92: LeNG29Ueova S802 13,4
Error in line 97: hHH7vG S883 70,1
Error in line 117: XCu4 S802 62,9
Error in line 122: S464 A482 0,7
Error in line 123: S464 S883 55,5
Error in line 125: S464 S464 90,5
Error in line 129: S464 S883 89,3
Error in line 145: LeNG29Ueova A482 83,4
Error in line 150: LeNG29Ueova S802 42,4
Error in line 163: hHH7vG S883 57,5
Error in line 167: 2sx9tAfr S802 38,8
Error in line 177: LeNG29Ueova S464 87,3
Error in line 186: XCu4 S存存3 存9,存
Error in line 191: S464 S464 `7,8
Error in line 198: S464 S802 6,2
Error in line 199: S464 A482 48,1
Error in line 200: S464 S802 31,6
Error in line 201: S464 S883 63,4
Error in line 203: S464 A482 6,0
Error in line 202: lcpzxSTrhoZ S802 62,8
Error in line 211: lcpzxSTrhoZ S464 14,5
Error in line 212: lcpzxSTrhoZ A482 20,9
Error in line 208: 2sx9tAfr S464 59,8
Error in line 215: hHH7vG S883 96,1
Error in line 221: hHH7vG S802 21,6
Error in line 225: 2sx9tAfr S802 3,47
Error in line 228: XCu4 S883 46,8
Error in line 229: XCu4 A482 28,8
Error in line 233: KXV A482 77,1
